# mcp-examples

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
alloy-wallet/: Cargo.toml  README.md  alloy-wallet.did  dfx.json  provision.sh
alloy-wallet/src/: bitcoin.rs  ethereum.rs  lib.rs  solana.rs
alloy-wallet/src/ethereum/: evm_rpc.rs
alloy-wallet/src/solana/: sol_rpc.rs
odd-even/: Cargo.toml  README.md  canister_ids.json  dfx.json  odd-even.did
odd-even/scripts/: deploy.sh  register.sh
odd-even/src/: lib.rs  repo.rs
scripts/: deploy.sh
token-transferring/: Cargo.toml  README.md  canister_ids.json  dfx.json  token-transferring.did
token-transferring/scripts/: deploy.sh  register.sh
token-transferring/src/: ledger.rs  lib.rs  runtime.rs
transaction-history/: Cargo.toml  README.md  dfx.json  transaction-history.did
transaction-history/src/: icp_index.rs  lib.rs
