[package]
name = "alloy-wallet"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.18.0"
ic-http-certification = "3.0.3"
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", branch = "main" }
ic-rmcp = {git = "https://github.com/ByteSmithLabs/ic-rmcp", branch = "main"}
serde = "1.0.219"
serde_bytes = "0.11.17"
schemars = "0.8.22"
serde_json = "1.0.140"
bitcoin = "0.32.6"
anyhow = "1.0.98"
ethers-core = "2.0.14"
num = "0.4.3"
alloy-consensus = "0.1.3"
alloy-primitives = "0.7.6"
alloy-eips = "0.1.3"
num-traits = "0.2.19"
ic-secp256k1 = "0.1.0"

# See https://forum.dfinity.org/t/module-imports-function-wbindgen-describe-from-wbindgen-placeholder-that-is-not-exported-by-the-runtime/11545/8
getrandom = { version = "*", default-features = false, features = ["custom"] }
