[package]
name = "token-transferring"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.17"
ic-http-certification = "3.0.3"
ic-cdk-macros = "0.13"
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", branch = "main" }
ic-rmcp = {git = "https://github.com/ByteSmithLabs/ic-rmcp", branch = "main"}
serde = "1.0.219"
serde_bytes = "0.11.17"
schemars = "0.8.22"
serde_json = "1.0.140"
rust_decimal = "1.37"